Bugfix z-index
main 0 , sidebar 1 , navbar 2

--- a/app/css/w3c.css
+++ b/app/css/w3c.css
@@ -569,6 +569,7 @@ a {
     position: relative;
     width: 100%;
    /* Modificato da "hidden" a "visible" per comportamento z-index */
+   z-index: 2;
     overflow: visible;
     
 }
